<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="ResourceName">Gallery</string>

    <!--选择图片的图库页面-->
    <string name="gallery_text_gallery_title">图片选择</string>
    <string name="gallery_text_gallery_right_text">选择</string>
    <string name="gallery_text_browse_image_right_text">完成</string>

    <!--图片浏览的页面相关-->
    <string name="gallery_text_browse_image_title">图片浏览</string>
    <string name="gallery_text_browse_image_title_delete">删除</string>
    <string name="gallery_text_delete_image_dialog_title">确定要删除这张照片吗？</string>
    <string name="gallery_text_delete_image_dialog_confirm">删除</string>
    <string name="gallery_text_delete_image_dialog_cancel">取消</string>
    <string name="gallery_text_browse_image_btn_complete">完成</string>
    <!--选择图片的弹窗的文字-->
    <string name="gallery_choose_image_dialog_item_camera">拍照</string>
    <string name="gallery_choose_image_dialog_item_gallery">从手机相册选择</string>
    <string name="gallery_choose_image_dialog_item_cancel">取消</string>
</resources>
