<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gallery_color_f3eeeeee"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_50"
        android:background="@color/color_95white"
        android:gravity="center"
        android:text="@string/gallery_text_delete_image_dialog_title"
        android:textColor="@color/color_black"
        android:textSize="@dimen/text_16" />

    <TextView
        android:id="@+id/gallery_tv_delete_image_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_50"
        android:layout_marginTop="@dimen/main_1"
        android:background="@color/color_95white"
        android:gravity="center"
        android:text="@string/gallery_text_delete_image_dialog_confirm"
        android:textColor="@color/color_black"
        android:textSize="@dimen/text_16" />

    <TextView
        android:id="@+id/gallery_tv_delete_image_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_50"
        android:layout_marginTop="@dimen/main_6"
        android:background="@color/color_95white"
        android:gravity="center"
        android:text="@string/gallery_text_delete_image_dialog_cancel"
        android:textColor="@color/color_black"
        android:textSize="@dimen/text_16" />
</LinearLayout>
